[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Map/Level.gd" type="Script" id=1]
[ext_resource path="res://Resources/TileSets/Ground.tres" type="TileSet" id=2]
[ext_resource path="res://Resources/TileSets/Triggers.tres" type="TileSet" id=3]
[ext_resource path="res://Resources/TileSets/Powerups.tres" type="TileSet" id=4]
[ext_resource path="res://Resources/TileSets/Enemies.tres" type="TileSet" id=5]
[ext_resource path="res://Resources/TileSets/Interactive.tres" type="TileSet" id=6]
[ext_resource path="res://Resources/TileSets/Environment.tres" type="TileSet" id=7]
[ext_resource path="res://Scenes/Entities/SpawnHelper.tscn" type="PackedScene" id=8]

[node name="Test" type="YSort"]
script = ExtResource( 1 )
levelID = "l_testHouse"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="TextureRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnHelper" parent="." instance=ExtResource( 8 )]

[node name="Spawn" type="Position2D" parent="."]
position = Vector2( 128, 248 )
__meta__ = {
"_gizmo_extents_": 32.0
}

[node name="SpawnMaps" type="Node2D" parent="."]

[node name="d_alive" type="Node2D" parent="SpawnMaps"]
scale = Vector2( 2, 2 )

[node name="Tiles" type="TileMap" parent="SpawnMaps/d_alive"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1
tile_data = PoolIntArray( -1, 96, 0, -65536, 96, 0, -65535, 96, 0, -65534, 96, 0, -65533, 96, 0, -65532, 96, 0, -65531, 96, 0, -65530, 96, 0, -65529, 96, 0, -65528, 96, 0, 65535, 96, 0, 0, 196, 0, 1, 196, 0, 2, 196, 0, 3, 196, 0, 4, 196, 0, 5, 196, 0, 6, 196, 0, 7, 196, 0, 8, 96, 0, 131071, 96, 0, 65536, 196, 0, 65537, 204, 0, 65538, 204, 0, 65539, 204, 0, 65540, 204, 0, 65541, 204, 0, 65542, 204, 0, 65543, 196, 0, 65544, 96, 0, 196607, 96, 0, 131072, 196, 0, 131073, 204, 0, 131074, 192, 0, 131075, 192, 0, 131076, 192, 0, 131077, 192, 0, 131078, 204, 0, 131079, 196, 0, 131080, 96, 0, 262143, 96, 0, 196608, 196, 0, 196609, 204, 0, 196610, 192, 0, 196611, 200, 0, 196612, 200, 0, 196613, 192, 0, 196614, 204, 0, 196615, 196, 0, 196616, 96, 0, 327679, 96, 0, 262144, 196, 0, 262145, 204, 0, 262146, 192, 0, 262147, 200, 0, 262148, 200, 0, 262149, 192, 0, 262150, 204, 0, 262151, 196, 0, 262152, 96, 0, 393215, 96, 0, 327680, 196, 0, 327681, 204, 0, 327682, 192, 0, 327683, 192, 0, 327684, 192, 0, 327685, 192, 0, 327686, 204, 0, 327687, 196, 0, 327688, 96, 0, 458751, 96, 0, 393216, 196, 0, 393217, 204, 0, 393218, 204, 0, 393219, 204, 0, 393220, 204, 0, 393221, 204, 0, 393222, 204, 0, 393223, 196, 0, 393224, 96, 0, 524287, 96, 0, 458752, 196, 0, 458753, 196, 0, 458754, 196, 0, 458755, 196, 0, 458756, 196, 0, 458757, 196, 0, 458758, 196, 0, 458759, 196, 0, 458760, 96, 0, 589823, 96, 0, 524288, 96, 0, 524289, 96, 0, 524290, 96, 0, 524291, 196, 0, 524292, 196, 0, 524293, 96, 0, 524294, 96, 0, 524295, 96, 0, 524296, 96, 0 )

[node name="Environment" type="TileMap" parent="SpawnMaps/d_alive"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1

[node name="Triggers" type="TileMap" parent="SpawnMaps/d_alive"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1
tile_data = PoolIntArray( 524291, 1, 0, 524292, 1, 0 )

[node name="Interactive" type="TileMap" parent="SpawnMaps/d_alive"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1

[node name="Powerups" type="TileMap" parent="SpawnMaps/d_alive"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1
tile_data = PoolIntArray( 65537, 0, 0, 65542, 0, 0, 393217, 0, 0, 393222, 0, 0 )

[node name="Enemies" type="TileMap" parent="SpawnMaps/d_alive"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1

[node name="d_dead" type="Node2D" parent="SpawnMaps"]
visible = false
scale = Vector2( 2, 2 )

[node name="Tiles" type="TileMap" parent="SpawnMaps/d_dead"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1
tile_data = PoolIntArray( -1, 304, 0, -65536, 304, 0, -65535, 304, 0, -65534, 304, 0, -65533, 304, 0, -65532, 304, 0, -65531, 304, 0, -65530, 304, 0, -65529, 304, 0, -65528, 304, 0, 65535, 304, 0, 0, 404, 0, 1, 404, 0, 2, 404, 0, 3, 404, 0, 4, 404, 0, 5, 404, 0, 6, 404, 0, 7, 404, 0, 8, 304, 0, 131071, 304, 0, 65536, 404, 0, 65537, 412, 0, 65538, 412, 0, 65539, 412, 0, 65540, 412, 0, 65541, 412, 0, 65542, 412, 0, 65543, 404, 0, 65544, 304, 0, 196607, 304, 0, 131072, 404, 0, 131073, 412, 0, 131074, 400, 0, 131075, 400, 0, 131076, 400, 0, 131077, 400, 0, 131078, 412, 0, 131079, 404, 0, 131080, 304, 0, 262143, 304, 0, 196608, 404, 0, 196609, 412, 0, 196610, 400, 0, 196611, 408, 0, 196612, 408, 0, 196613, 400, 0, 196614, 412, 0, 196615, 404, 0, 196616, 304, 0, 327679, 304, 0, 262144, 404, 0, 262145, 412, 0, 262146, 400, 0, 262147, 408, 0, 262148, 408, 0, 262149, 400, 0, 262150, 412, 0, 262151, 404, 0, 262152, 304, 0, 393215, 304, 0, 327680, 404, 0, 327681, 412, 0, 327682, 400, 0, 327683, 400, 0, 327684, 400, 0, 327685, 400, 0, 327686, 412, 0, 327687, 404, 0, 327688, 304, 0, 458751, 304, 0, 393216, 404, 0, 393217, 412, 0, 393218, 412, 0, 393219, 412, 0, 393220, 412, 0, 393221, 412, 0, 393222, 412, 0, 393223, 404, 0, 393224, 304, 0, 524287, 304, 0, 458752, 404, 0, 458753, 404, 0, 458754, 404, 0, 458755, 404, 0, 458756, 404, 0, 458757, 404, 0, 458758, 404, 0, 458759, 404, 0, 458760, 304, 0, 589823, 304, 0, 524288, 304, 0, 524289, 304, 0, 524290, 304, 0, 524291, 404, 0, 524292, 404, 0, 524293, 304, 0, 524294, 304, 0, 524295, 304, 0, 524296, 304, 0 )

[node name="Environment" type="TileMap" parent="SpawnMaps/d_dead"]
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1

[node name="Triggers" type="TileMap" parent="SpawnMaps/d_dead"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1
tile_data = PoolIntArray( 524291, 1, 0, 524292, 1, 0 )

[node name="Interactive" type="TileMap" parent="SpawnMaps/d_dead"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1

[node name="Powerups" type="TileMap" parent="SpawnMaps/d_dead"]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1
tile_data = PoolIntArray( 65537, 1, 0, 65542, 1, 0, 393217, 1, 0, 393222, 1, 0 )

[node name="Enemies" type="TileMap" parent="SpawnMaps/d_dead"]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 4
format = 1

[node name="Tiles" type="Node2D" parent="."]

[node name="Triggers" type="Node2D" parent="."]

[node name="Entities" type="YSort" parent="."]
